# DomainPowerModeling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  reports\pd1\cpu\total_event_power.csv  reports\pd1\cpu\total_state_power.csv  reports\pd1\memory\total_event_power.csv  reports\pd1\memory\total_state_power.csv  reports\pd1\total_event_power.csv  reports\pd1\total_power.csv  reports\pd1\total_state_power.csv  reports\pd2\cpu\total_event_power.csv  reports\pd2\cpu\total_power.csv  reports\pd2\cpu\total_state_power.csv  reports\pd2\memory\total_event_power.csv  reports\pd2\memory\total_power.csv  reports\pd2\memory\total_state_power.csv  reports\pd2\total_event_power.csv  reports\pd2\total_power.csv  reports\pd2\total_state_power.csv  reports\total_event_power.csv  reports\total_power.csv  reports\total_state_power.csv
.cache/clangd/index/: DummyInterconnect.cpp.1C905BB5593E4768.idx  DummyInterconnect.h.36042E9BEE8E9249.idx  DummyMaster.cpp.557F9C53E1802312.idx  DummyMaster.h.387AE2AA332169A3.idx  Memory.cpp.D85F7A6D7595EA9A.idx  Memory.h.9C44A465C7133EC1.idx  PowerDomain1.cpp.BA61D3F3CCE08547.idx  PowerDomain1.h.4BF15A9765956E87.idx  PowerDomain2.cpp.0CB887DD939546DB.idx  PowerDomain2.h.B0EB1685DAF2D2C7.idx  backtracer.h.6115DBA0F2B1CCF5.idx  circular_buffer.h.62DC214E502950E1.idx  circular_q.h.9456467AD588895D.idx  common.h.914ACEF91C137301.idx  config.hpp.275B13DDF465618E.idx  convenience_socket_bases.h.1FBFC940EF2F6717.idx  core.h.08AF28C8BFA61020.idx  dut_top.cpp.078589520F38B649.idx  dut_top.h.E752876A3F30A642.idx  endian.hpp.C449C4A5B611701E.idx  fmt.h.698C1571F0D59D51.idx  format.h.1513BF812643CCA9.idx  gcc.hpp.A3B0629A1E286D86.idx  libstdcpp3.hpp.010A6E2089BD59AC.idx  linux.hpp.E4B3B8E5FE1DCFD0.idx  log_msg.h.D6B32A143A3B94B9.idx  log_msg_buffer.h.F2E006106512904D.idx  logger.h.33274655A1CB1DA9.idx  null_mutex.h.FC9CA67A3035AD86.idx  peq_with_get.h.70C2C1DE2D453C16.idx  periodic_worker.h.45A6E2206258EADF.idx  posix_features.hpp.56FD6AC08E230BC8.idx  registry.h.624DA3693EC8785D.idx  sc_attribute.h.C643B76EDBAE5567.idx  sc_bigint.h.4A5A0E295864E0EB.idx  sc_biguint.h.A82AE45358412B07.idx  sc_bit.h.67B0A4112198260B.idx  sc_bit_ids.h.9E791022CD53903E.idx  sc_bit_proxies.h.E636FEC964F93DD2.idx  sc_buffer.h.4FC4464A9AF4DDCA.idx  (+137 more)
imported/spdlog-1.11.0/lib/: libspdlog.so.1.11
imported/spdlog-1.11.0/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake
imported/spdlog-1.11.0/lib/pkgconfig/: spdlog.pc
imported/spdlog-1.11.0/src/spdlog_download-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  libspdlog.so.1.11.0  spdlogConfigTargets.cmake
imported/spdlog-1.11.0/tmp/: spdlog_download-cfgcmd.txt  spdlog_download-gitclone.cmake  spdlog_download-gitupdate.cmake
imported/systemc-2.3.4/lib/: libsystemc.so.2.3.4
imported/systemc-2.3.4/src/systemc_download-build/: .ninja_deps  .ninja_log  CMakeCache.txt  SystemCLanguageConfig.cmake  SystemCLanguageTargets.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
imported/systemc-2.3.4/src/systemc_download-build/examples/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/examples/sysc/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/examples/sysc/fir/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/examples/sysc/pipe/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/examples/sysc/pkt_switch/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/examples/tlm/: CTestTestfile.cmake  cmake_install.cmake
imported/systemc-2.3.4/src/systemc_download-build/src/: cmake_install.cmake  libsystemc.so.2.3.4
imported/systemc-2.3.4/src/systemc_download-stamp/: systemc_download-gitinfo.txt
imported/systemc-2.3.4/tmp/: systemc_download-cfgcmd.txt  systemc_download-gitclone.cmake  systemc_download-gitupdate.cmake
inc/: DummyInterconnect.h  DummyMaster.h  Memory.h  PowerDomain1.h  PowerDomain2.h  dut_top.h  power_defines.h  power_domain_logger.h
python_scripts/: cpu0_static_power.py  domain_bar_chart.py  domain_pie_chart.py  module_current.py  pd1_cpu_total_power.csv  pd1_memory_total_power.csv  pd1total_event_power.csv  pd1total_power.csv  pd1total_state_power.csv  pd2total_event_power.csv  pd2total_power.csv  pd2total_state_power.csv  plot_all.py  plot_state.py  total_current.py  total_event_power.csv  total_power.csv  total_power.py  total_state_power.csv
reports/domain_currents/pd1/: currentlog.csv
reports/domain_currents/pd2/: currentlog.csv
reports/pd1/cpu/cpu0/: cpu0PowerChannel_event_power_log.csv  cpu0PowerChannel_eventlog.csv  cpu0PowerChannel_statelog.csv  cpu0PowerChannel_static_power_log.csv
reports/pd1/memory/mem0/: mem0PowerChannel_event_power_log.csv  mem0PowerChannel_eventlog.csv  mem0PowerChannel_statelog.csv  mem0PowerChannel_static_power_log.csv
reports/pd1/memory/mem1/: mem1PowerChannel_event_power_log.csv  mem1PowerChannel_eventlog.csv  mem1PowerChannel_statelog.csv  mem1PowerChannel_static_power_log.csv
reports/pd2/cpu/cpu0/: cpu0PowerChannel_event_power_log.csv  cpu0PowerChannel_eventlog.csv  cpu0PowerChannel_statelog.csv  cpu0PowerChannel_static_power_log.csv
reports/pd2/cpu/cpu1/: cpu1PowerChannel_event_power_log.csv  cpu1PowerChannel_eventlog.csv  cpu1PowerChannel_statelog.csv  cpu1PowerChannel_static_power_log.csv
reports/pd2/memory/mem0/: mem0PowerChannel_event_power_log.csv  mem0PowerChannel_eventlog.csv  mem0PowerChannel_statelog.csv  mem0PowerChannel_static_power_log.csv
reports/pd2/memory/mem1/: mem1PowerChannel_event_power_log.csv  mem1PowerChannel_eventlog.csv  mem1PowerChannel_statelog.csv  mem1PowerChannel_static_power_log.csv
src/: DummyInterconnect.cpp  DummyMaster.cpp  Memory.cpp  PowerDomain1.cpp  PowerDomain2.cpp  dut_top.cpp  power_domain_logger.cpp  simulator.cpp
(+58 files in other folders)
